--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "bcrypt": "^3.0.7",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "jwt-simple": "^0.5.6",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^7.17.1",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "nodemon src/server.js"
